--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,13 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.2'
+
+    minSdkVersion = 15
+    targetSdkVersion = 27
+
+    supportVersion = '27.0.2'
+}
