--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation project(':bannerlibrary')
+    implementation project(':hmbanner')
 }
