--- a/hmbanner/src/main/AndroidManifest.xml
+++ b/hmbanner/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.brotherd.bannerlibrary">
+    package="com.brotherd.banner">
 
     <application
         android:allowBackup="true"
