--- a/hmbanner/build.gradle
+++ b/hmbanner/build.gradle
@@ -25,9 +25,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:$supportVersion"
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:$supportVersion"
 }
 
 def siteUrl = 'https://github.com/humanheima/HmSimpleBanner'      // 项目的主页
