--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity"></activity>
+        <activity android:name=".ui.MainActivity"/>
         <activity android:name=".ui.SimpleActivity" />
         <activity android:name=".ui.TransformActivity" />
         <activity android:name=".ui.GuidePageActivity">
