--- a/hmbanner/build.gradle
+++ b/hmbanner/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
 
 def siteUrl = 'https://github.com/humanheima/HmSimpleBanner'      // 项目的主页
